# wikipedia-dataset-curator

./: .gitignore  README.md  problem.md  pyproject.toml
src/: main.py
src/agent/: page_visitor.py
src/domain/: page.py
src/services/: dataset_service.py  diversity_service.py  wikipedia_service.py
