[tool.poetry]
name = "wikipedia-dataset-curator"
version = "0.1.0"
description = "Intelligent agent for curating diverse Wikipedia datasets"
authors = ["Gleb Popov <g.popov@innopolis.university>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
wikipedia = "1.4.0"
sentence-transformers = "5.1.2"
pandas = "2.3.3"
numpy = "2.3.5"
nltk = "3.9.2"
scikit-learn = "1.7.2"
scipy = "1.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
